added content and removed some components. Need to add new BG and logo

--- a/src/components/github-corner.astro
+++ b/src/components/github-corner.astro
@@ -1,4 +1,4 @@
-<!-- https://github.com/tholman/github-corners -->
+<!-- https://github.com/tholman/github-corners
 <a
   href="https://github.com/mhyfritz/astro-landing-page"
   aria-label="View source on GitHub"
@@ -49,4 +49,4 @@
       animation: octocat-wave 560ms ease-in-out;
     }
   }
-</style>
+</style> -->
