--- a/src/components/starfield.astro
+++ b/src/components/starfield.astro
@@ -1,4 +1,4 @@
-<div id="starfield" class="absolute inset-0">
+<!-- <div id="starfield" class="absolute inset-0">
   <canvas id="starfield-canvas"></canvas>
 </div>
 
@@ -102,4 +102,4 @@
     ctx.fillRect(-width / 2, -height / 2, width, height);
     rafId = requestAnimationFrame(frame);
   }
-</script>
+</script> -->
