Changes in the about section

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -17,7 +17,7 @@ const links: Array<FooterLink> = [
   {
     url: "https://astro.build/chat",
     description: "Astro on Discord",
-    icon: "fa-brands:discord",
+    icon: "fa-brands:facebook",
   },
   {
     url: "https://twitter.com/astrodotbuild",
