--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,9 +4,11 @@ import ThemeSwitcher from "~/components/theme-switcher.astro";
 import type { NavItem } from "~/types";
 
 const navItems: Array<NavItem> = [
-  { title: "Features", url: "#features" },
-  { title: "Compatibility", url: "#compatibility" },
-  { title: "Showcase", url: "#showcase" },
+  // Changed the order of NAV bar
+  { title: "About", url: "#intro" }, 
+  { title: "Committee", url: "#features" },
+  { title: "Secretariat", url: "#showcase" },
+  { title: "FAQ", url: "#compatibility" },
 ];
 ---
 
