--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -3,7 +3,8 @@ import { Icon } from "astro-icon";
 import ContentSection from "~/components/content-section.astro";
 ---
 
-<ContentSection title="Just ship less" id="intro">
+<!-- Changing of content -->
+<ContentSection title="Where Ideas become Resolution" id="intro">
   <Icon slot="eyebrow" name="logomark" class="h-32" />
   <Fragment slot="lead">
     CMRIT MUN 
@@ -12,20 +13,14 @@ import ContentSection from "~/components/content-section.astro";
      performance meets <span class="text-primary">powerful</span> developer
     experience.
   </Fragment>
-  <div class="grid grid-cols-1 gap-2 sm:grid-cols-2">
+  <div>
+    <!-- Register button -->
     <a
-      href="https://docs.astro.build/"
+      href="{}"
       class="flex items-center justify-center gap-3 border-2 border-current px-6 py-4"
     >
       <Icon pack="mdi" name="telescope" class="h-8" />
-      <span>Read the docs</span>
-    </a>
-    <a
-      href="https://astro.new/"
-      class="flex items-center justify-center gap-3 border-2 border-current px-6 py-4"
-    >
-      <Icon pack="mdi" name="rocket" class="h-8" />
-      <span>Try it out</span>
+      <span>Register</span>
     </a>
   </div>
 </ContentSection>
