--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -1,54 +1,44 @@
 ---
 import { Picture } from "@astrojs/image/components";
 import { Icon } from "astro-icon";
-import astronautImage from "~/assets/astronaut.png";
 import HeroImage from "~/components/hero-image.astro";
-import Starfield from "~/components/starfield.astro";
-import GitHubCorner from "./github-corner.astro";
 
 const widths = [450, 800];
 const sizes = "(min-width: 640px) 42vw, 67vw";
 ---
 
 <section class="relative h-full bg-black">
-  <img src="Conference_1.jpeg" alt="Background Image" class="absolute inset-0 w-full h-full object-cover opacity-70" style="z-index: -1;">
-  <!-- <Starfield /> -->
-  <GitHubCorner />
+  <img
+    src="src/assets/Conference_1.jpg"
+    alt="Background Image"
+    class="absolute inset-0 h-full w-full object-cover opacity-70"
+    style="z-index: -1;"
+  />
+
   <div id="splash-bg-fallback" class="absolute inset-0 hidden opacity-40">
     <HeroImage />
   </div>
-  <div class="relative grid h-full place-items-center sm:grid-cols-2" id="first_page">
-  <h2
-    class="flex flex-col gap-2 self-end sm:gap-4 sm:self-auto sm:justify-self-end text-center"
-    style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);"
+  <div
+    class="relative grid h-full place-items-center sm:grid-cols-2"
+    id="first_page"
   >
-    <Icon name="logomark" class="h-24 text-white md:h-32" />
-    <div
-      class="gradient-text text-center font-extrabold tracking-tighter text-8xl"
+    <h2
+      class="flex flex-col gap-2 self-end text-center sm:gap-4 sm:self-auto sm:justify-self-end"
+      style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);"
     >
-      CMRIT MUN 2023
-      <div>
-        <font size="7">7th, 8th and 9th December</font>
+      <Icon name="logomark" class="h-24 text-white md:h-32" />
+      <div
+        class="gradient-text text-center font-extrabold tracking-tighter text-7xl"
+      >
+        CMRIT MUN 2023
+        <div class="tracking-normal my-2">
+          <font size="7">7th, 8th and 9th December</font>
+        </div>
+        <div style="margin-top: -35px;">
+          <font class="tracking-normal" size="7">CMRIT, Hyderabad</font>
+        </div>
       </div>
-      <div style="margin-top: -35px;">
-        <font size="7">CMRIT, Hyderabad</font>
-      </div>
-    </div>
-  </h2>
-  
-    <!-- <div
-      id="astronaut"
-      class="w-2/3 max-w-3xl self-start sm:w-10/12 sm:self-auto sm:justify-self-start"
-    >
-      <Picture
-        class="h-full w-full object-cover"
-        src={astronautImage}
-        widths={widths}
-        sizes={sizes}
-        loading="eager"
-        alt="A floating astronaut in a space suit"
-      />
-    </div> -->
+    </h2>
   </div>
 </section>
 
