--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -7,11 +7,7 @@ import ContentSection from "~/components/content-section.astro";
 <ContentSection title="Where Ideas become Resolution" id="intro">
   <Icon slot="eyebrow" name="logomark" class="h-32" />
   <Fragment slot="lead">
-    CMRIT MUN 
-    <span class="text-primary">modern</span> web.
-    <span class="text-primary">Lightning-fast</span>
-     performance meets <span class="text-primary">powerful</span> developer
-    experience.
+  Join us in shaping the future, one resolution at a time. 
   </Fragment>
   <div>
     <!-- Register button -->
