added logo, background, Secretariat, footer details

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -16,7 +16,7 @@ const features: Array<FeatureItem> = [
     subtitle:"UNITED NATIONS HUMAN RIGHTS COUNCIL",
     description:
       "UNHRC is a key committee in Model United Nations that addresses human rights issues on a global scale. Delegates in this committee represent different countries and work towards promoting and protecting human rights worldwide. They debate and develop resolutions related to pressing human rights concerns, such as freedom of expression, gender equality, and the rights of vulnerable populations. UNHRC plays a crucial role in raising awareness and taking action to ensure the realization of human rights for all.",
-    icon: "mdi:human rights",
+    icon: "mdi:human",
   },
   {
     title: "DISEC",
