--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -5,24 +5,24 @@ import type { FooterLink } from "~/types";
 
 const links: Array<FooterLink> = [
   {
-    url: "https://astro.build/",
-    description: "Astro's official website",
-    icon: "mdi:home",
+    url: "https://cmrithyderabad.edu.in/",
+    description: "CMR Institute Of Technology",
+    icon: "mdi:university",
   },
   {
-    url: "https://github.com/mhyfritz/astro-landing-page",
-    description: "View source on GitHub",
-    icon: "fa-brands:github-alt",
+    url: "https://www.instagram.com/cmritmun/",
+    description: "CMRIT MUN in Instagram",
+    icon: "fa-brands:instagram",
   },
   {
-    url: "https://astro.build/chat",
-    description: "Astro on Discord",
+    url: "https://www.facebook.com/cmritmun/",
+    description: "CMRIT MUN in Facebook",
     icon: "fa-brands:facebook",
   },
   {
-    url: "https://twitter.com/astrodotbuild",
+    url: "https://www.linkedin.com/company/cmrit-mun/",
     description: "Astro on Twitter",
-    icon: "fa-brands:twitter",
+    icon: "fa-brands:linkedin",
   },
 ];
 ---
