--- a/src/components/hero-image.astro
+++ b/src/components/hero-image.astro
@@ -1,8 +1,8 @@
 ---
 import { Picture } from "@astrojs/image/components";
-import moonImage from "~/assets/moon.jpg";
+import moonImage from "~/assets/footer.jpg";
 
-const widths = [450, 800, 1200];
+const widths = [450, 800, 1500];
 const sizes = "100vw";
 ---
 
