--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -8,7 +8,7 @@ const navItems: Array<NavItem> = [
   { title: "About", url: "#intro" }, 
   { title: "Committee", url: "#features" },
   { title: "Secretariat", url: "#showcase" },
-  { title: "FAQ", url: "#compatibility" },
+  { title: "FAQ", url: "#FAQ" },
 ];
 ---
 
@@ -17,9 +17,7 @@ const navItems: Array<NavItem> = [
   class="absolute bottom-0 z-20 flex w-full items-center justify-between border-b border-transparent px-8 py-4 text-white"
 >
   <a class="flex items-center gap-3 hover:!text-default" href="#">
-    <h1 class="sr-only">CMRIT MUN</h1>
-    <Icon name="logomark" class="h-10" />
-    <Icon name="wordmark" class="hidden h-4 sm:block" />
+    <h1 class="font-extrabold">CMRIT MUN</h1>
   </a>
   <div>
     <div class="flex items-center gap-6">
