--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Header from "~/components/header.astro";
 import Intro from "~/components/intro.astro";
 import Showcase from "~/components/showcase.astro";
 import Splash from "~/components/splash.astro";
+import FAQ from "~/components/FAQ.astro";
 import "~/styles/index.css";
 
 const { generator, site } = Astro;
@@ -68,6 +69,7 @@ const description =
       <Features />
       <!-- <Compatibility /> -->
       <Showcase />
+      <FAQ/>
     </div>
     <Footer />
   </body>
