changes in header

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -35,7 +35,7 @@ const features: Array<FeatureItem> = [
 ];
 ---
 
-<ContentSection title="Committees" id="features">
+<ContentSection title="Committees" id="committee">
   <Fragment slot="lead">
     Our Committee Selection
   </Fragment>
