--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -5,9 +5,9 @@ import type { NavItem } from "~/types";
 
 const navItems: Array<NavItem> = [
   // Changed the order of NAV bar
-  { title: "About", url: "#intro" }, 
-  { title: "Committee", url: "#features" },
-  { title: "Secretariat", url: "#showcase" },
+  { title: "About", url: "#about" }, 
+  { title: "Committee", url: "#committee" },
+  { title: "Secretariat", url: "#secretariat" },
   { title: "FAQ", url: "#FAQ" },
 ];
 ---
