--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -5,7 +5,7 @@ import ContentSection from "~/components/content-section.astro";
 ---
 
 <!-- Changing of content -->
-<ContentSection title="Where Ideas become Resolution" id="intro">
+<ContentSection title="Where Ideas become Resolution" id="about">
   <Fragment slot="lead">
     Every idea, no matter how small, carries the potential to ignite change. 
     It's a call to dreamers, thinkers, and doers, reminding them that within them lies the power to turn vision into reality.
