--- a/src/components/showcase.astro
+++ b/src/components/showcase.astro
@@ -69,7 +69,7 @@ const features: Array<FeatureItem> = [
 ];
 ---
 
-<ContentSection title="Secretariat" id="showcase">
+<ContentSection title="Secretariat" id="secretariat">
   <Fragment slot="lead">
     Meet our <span class="text-primary">Team</span>.{" "}
   </Fragment>
