--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -17,8 +17,8 @@ import ContentSection from "~/components/content-section.astro";
     href="{}"
     class="flex items-center justify-center gap-3 border-2 border-current px-6 py-4"
     >
-    <Icon pack="mdi" name="telescope" class="h-8" />
-    <span>Register</span>
+    <Icon pack="mdi" name="register" class="h-8" />
+    <span>Registrations</span>
   </a>
 </div>
 </ContentSection>
