--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Intro from "~/components/intro.astro";
 import Showcase from "~/components/showcase.astro";
 import Splash from "~/components/splash.astro";
 import FAQ from "~/components/FAQ.astro";
-import "~/styles/index.css";
+import "~/styles/index.css"; 
 
 const { generator, site } = Astro;
 const image = new URL("social.jpg", site);
@@ -21,7 +21,7 @@ const description =
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="../src/assets/favicon.ico" />
     <meta name="generator" content={generator} />
 
     <title>CMRIT-MUN</title>
