--- a/src/components/splash-image.astro
+++ b/src/components/splash-image.astro
@@ -11,5 +11,5 @@ const sizes = "100vw";
   src={moonImage}
   widths={widths}
   sizes={sizes}
-  alt="The ridged surface of the moon"
+  alt=""
 />
