added content in FAQ section

--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -4,31 +4,47 @@ import type { FeatureItem } from "~/types";
 
 const features: Array<FeatureItem> = [
     {
-      title: "AIPPM",
-      subtitle:"ALL INDIA POLITICAL PARTY MEET",
+      title: "How do I register for the MUN conference?",
+      subtitle:"",
       description:
-        "AIPPM is a simulated committee in Model United Nations that focuses on the political landscape of India. It provides a platform for delegates to represent various political parties and engage in discussions regarding national and regional policies. Delegates analyze current political issues, draft resolutions, and negotiate with other parties to find solutions. AIPPM aims to enhance participants' understanding of Indian politics, policy-making, and coalition building.",
+        "Delegates are urged to complete their conference registration by utilizing the Google form accessible on the official website as well as on the social media pages.",
       icon: "mdi:handshake",
     },
     {
-      title: "UNHRC",
+      title: "How can I prepare for my assigned committee or role?",
       subtitle:"UNITED NATIONS HUMAN RIGHTS COUNCIL",
       description:
-        "UNHRC is a key committee in Model United Nations that addresses human rights issues on a global scale. Delegates in this committee represent different countries and work towards promoting and protecting human rights worldwide. They debate and develop resolutions related to pressing human rights concerns, such as freedom of expression, gender equality, and the rights of vulnerable populations. UNHRC plays a crucial role in raising awareness and taking action to ensure the realization of human rights for all.",
+        "Delegates are encouraged to establish contact with the organizers by utilizing the contact numbers provided on the website or within the application form",
       icon: "mdi:human",
     },
     {
-      title: "DISEC",
+      title: "How can I contact the conference organizers for additional questions or support?",
       subtitle:"DISARMAMENT & INTERNATIONAL SECURITY COMMITTEE",
       description:
         "DISEC is a prominent committee in Model United Nations focused on matters related to disarmament, global security, and non-proliferation of weapons. Delegates representing different countries deliberate on a range of topics, including nuclear disarmament, arms control, cybersecurity, and counter-terrorism. Through research, negotiation, and drafting resolutions, DISEC seeks to establish measures that enhance international security, reduce arms race tensions, and foster cooperation among nations.",
       icon: "mdi:security",
     },
     {
-      title: "IP",
+      title: "How can I stay updated on conference news and announcements?",
       subtitle:"INTERNATIONAL PRESS",
       description:
-        "The International Press Committee in Model United Nations is responsible for reporting on the proceedings and activities of the conference. Participants in this committee take on the role of journalists, photographers, and media personnel. They gather information, conduct interviews, and produce news articles, press releases, and multimedia content. The International Press plays a vital role in disseminating information, fostering dialogue, and documenting the diverse perspectives and diplomatic efforts of the Model UN conference.",
+        "Any updates related to the MUN will be posted on the social media accounts",
+      icon: "mdi:camera",
+    },
+
+    {
+      title: "Is there a code of conduct or behavior expectations during the conference?",
+      subtitle:"INTERNATIONAL PRESS",
+      description:
+        "Delegates are earnestly expected to exhibit exemplary behavior both within the conference premises and on the campus. It is strongly advised that attendees abstain from engaging in any activities, including but not limited to smoking and the consumption of alcoholic beverages, as well as any other conduct that may disrupt the harmonious atmosphere of the conference.",
+      icon: "mdi:camera",
+    },
+
+    {
+      title: "What is the dress code for the MUN conference?",
+      subtitle:"INTERNATIONAL PRESS",
+      description:
+        "The attire prescribed for the initial day of the conference shall adhere to the business formal dress code, whereas on the second day, participants are kindly requested to put on Indian traditional attire, and finally, on the third day, attendees are expected to resume the business formal dress code",
       icon: "mdi:camera",
     },
   ];
