--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -8,6 +8,7 @@ const navItems: Array<NavItem> = [
   { title: "Committee", url: "#committee" },
   { title: "Secretariat", url: "#secretariat" },
   { title: "FAQ", url: "#FAQ" },
+  {title: "Contact Us", url: "#contact" }
 ];
 ---
 
