--- a/src/components/showcase.astro
+++ b/src/components/showcase.astro
@@ -7,6 +7,7 @@ const featuredSites = await getCollection(
   "showcase",
   ({ data }) => "featured" in data,
 );
+
 const orderedSites = featuredSites.sort(
   (a, b) => a.data.featured! - b.data.featured!,
 );
@@ -15,7 +16,7 @@ const features: Array<FeatureItem> = [
   {
     title: "Sanjana Yammanur",
     subtitle: "ALL INDIA POLITICAL PARTY MEET",
-    description: "",   
+    description: "letsjgejgej",   
     icon: "mdi:instagram",
   },
   {
